# ProofBirdsAreSwag

./: Build.exe.lnk  CMakeLists.txt  README.md
Data/: IDs.txt
src/: Game.cpp  Game.h  MathLib.cpp  MathLib.h  Settings.cpp  Settings.h  main.cpp
src/abstracts/: AbstractAction.cpp  AbstractAction.h  AbstractChoice.cpp  AbstractChoice.h  AbstractMenu.cpp  AbstractMenu.h  InputSubscriber.cpp  InputSubscriber.h
src/abstracts/ScreenElements/: AbstractButton.cpp  AbstractButton.h  TextButton.cpp  TextButton.h
src/birds/: Game.cpp  Game.h
src/birds/LevelElements/: Bird1.cpp  Bird1.h  BirdPlayer.cpp  BirdPlayer.h  Particle.cpp  Particle.h  Surface.cpp  Surface.h
src/birds/abstracts/: AbstractCircle.cpp  AbstractCircle.h  AbstractLevel.cpp  AbstractLevel.h  AbstractLevelElement.h  AbstractPlayer.cpp  AbstractPlayer.h  AbstractRecipe.cpp  AbstractRecipe.h  AbstractWind.h  Recipe.cpp  Recipe.h
src/birds/abstracts/LevelElements/: AbstractCircle.cpp  AbstractCircle.h  AbstractLevelElement.h  AbstractPlayer.cpp  AbstractPlayer.h  Bird1.cpp  Bird1.h  BirdPlayer.cpp  BirdPlayer.h  Particle.cpp  Particle.h  Surface.cpp  Surface.h  Wind.h
src/birds/levels/: FlyingLevel.cpp  FlyingLevel.h  LevelLibrary.cpp  LevelLibrary.h  LevelLoader.hpp  TestLevel.cpp  TestLevel.h
src/birds/menus/: MainMenu.cpp  MainMenu.h  MenuLoader.hpp  PauseMenu.cpp  PauseMenu.h  SplashScreen.cpp  SplashScreen.h
src/managers/: ActionManager.cpp  ActionManager.h  AssetManager.cpp  AssetManager.h  InputManager.cpp  InputManager.h  MenuManager.cpp  MenuManager.h  Settings.cpp  Settings.h
